src/test/ui/never_type/diverging-fallback-unconstrained-return.stderr
error[E0277]: the trait bound `!: UnitReturn` is not satisfied
  --> $DIR/diverging-fallback-unconstrained-return.rs:31:23
   |
LL |     let _ = if true { unconstrained_return() } else { panic!() };
   |                       ^^^^^^^^^^^^^^^^^^^^ the trait `UnitReturn` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?
note: required by a bound in `unconstrained_return`
  --> $DIR/diverging-fallback-unconstrained-return.rs:15:28
   |
LL | fn unconstrained_return<T: UnitReturn>() -> T {
   |                            ^^^^^^^^^^ required by this bound in `unconstrained_return`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
